# CalendarPlanner

./: .dockerignore  .env.example  .gitignore  AI_IMAGE_PROMPTS.md  BRAND.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  Dockerfile  MONETIZATION.md  NOTICE  README.md  _fix_calendar.py  alex_response.md  capacitor.config.ts  config.py  main.py  package.json  pyproject.toml  requirements.txt  skills-lock.json
.github/workflows/: android-build.yml  e2e.yml
.jules/: bolt.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md  v4.0-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v5.1-MILESTONE-AUDIT.md
android/: README.md  twa-manifest.json
android/app/: build.gradle
app/: i18n.py
app/admin/: repository.py  routes.py  (+2 more)
e2e/: auth.setup.ts  global-setup.ts  playwright.config.ts
public/: manifest.json  offline.html  sw.js
scripts/: categorization_results.json  validate_categorization.py
self-hosted/: .env.template  CHANGELOG-SELFHOSTED.md  README.md  UPGRADE.md  docker-compose.yml
tests/: conftest.py  test_auth.py  test_billing.py  test_budget_settings.py  test_calendar_views.py  test_dashboard.py  test_events_api.py  test_events_integration.py  test_events_schemas.py  test_expenses.py  test_go_to_market.py  test_import.py  test_income.py  test_licensing.py  test_nlp.py  test_overview.py  test_performance.py  test_pwa.py  test_security.py  test_shopping.py  test_sync_api.py  test_sync_integration.py  test_users.py
(+180 files in other folders)
