[project]
name = "calendarplanner"
version = "1.0.0"
description = "Shared household calendar with Google Calendar sync"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "CalendarPlanner" }
]

dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
