[project]
name = "dobryplan"
version = "4.0.0"
description = "Shared household calendar & budget planner with Google Calendar sync"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
  { name = "Dobry Plan" }
]

dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
